--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,22 +3,24 @@
       <img src="../../assets/imgs/star_wars.png" width="200"alt="Logo">
   </div>
   <div text-center>
-    <h2>Sign In</h2>
+    <h2 class="title">Sign In</h2>
   </div> 
 
-  <form [formGroup]="loginForm" ngSubmit="login()">
-    <ion-item>
-      <ion-label>Email</ion-label>
-      <ion-input type="email" formControlName="email" name="email" placeholder="Email"><span class="fa fa-email"></span></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label>Password</ion-label>
-        <ion-input type="password" formControlName="password" name="password" placeholder="Password"><span class="fa fa-lock"></span></ion-input>
-      </ion-item>
-    
-    
-
-  </form>
+  <ion-card>
+    <ion-card-content>
+      <form [formGroup]="loginForm" ngSubmit="login()">
+          <ion-item>
+            <ion-label><ion-icon name="mail"></ion-icon></ion-label>
+            <ion-input type="email" formControlName="email" name="email" placeholder="Email"></ion-input>
+          </ion-item>
+          <ion-item>
+             <ion-label><ion-icon name="lock"></ion-icon></ion-label> 
+              <ion-input type="password" formControlName="password" name="password" placeholder="Password"></ion-input>
+            </ion-item>
+        </form>
+      </ion-card-content>
+  </ion-card>
+ 
 </ion-content>
 
 
