--- a/src/pages/missions/missions.html
+++ b/src/pages/missions/missions.html
@@ -8,13 +8,13 @@
 
   <ion-navbar>
      
-      <ion-buttons>   
+      <ion-buttons start>   
               <button ion-button menuToggle>
                 <ion-icon name="menu"></ion-icon>
               </button>
-            </ion-buttons> 
+      </ion-buttons> 
             
-            <ion-title>Missions</ion-title>  
+      <ion-title>Missions</ion-title>  
   </ion-navbar>
 
 </ion-header>
