--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 
 <ion-content text-center >
   <div class="logo">
-      <img src="../../assets/imgs/star_wars.png" width="200"alt="Logo">
+      <img src="../../assets/imgs/legends.jpg" width="200" alt="Logo">
   </div>
   <div text-center>
     <h2 ion-text color="light">Sign In</h2>
@@ -31,6 +31,13 @@
     </ion-buttons>
  
   </form>
+
+  <br>
+  <div class="logo">
+      <img src="../../assets/imgs/star_wars.png" width="200" alt="Logo">
+  </div>
+
+
 </ion-content>
 
 
