separate card component into its own folder, component emits and event and can now listen to changes from parent and navigate to details page

--- a/src/pages/characters/characters.html
+++ b/src/pages/characters/characters.html
@@ -21,7 +21,7 @@
 
 
 <ion-content padding>
-<ion-card *ngFor="let character of characters">
+<!-- <ion-card *ngFor="let character of characters">
   <img [src]="character.imageUrl" height="300"/>
   <ion-card-content>
     <ion-card-title text-center>
@@ -49,5 +49,6 @@
     
   </ion-card-content>
 
-</ion-card>
+</ion-card> -->
+<character-card (change)="toDetailsPage($event)" [userId] ="userId" [characters] = "characters"></character-card>
 </ion-content>
