--- a/src/pages/my-characters/my-characters.html
+++ b/src/pages/my-characters/my-characters.html
@@ -21,6 +21,7 @@
   
   
   <ion-content padding>
+    <character-card></character-card>
   <ion-card *ngFor="let favorite of favorites">
     <img [src]="favorite.imageUrl" height="300"/>
     <ion-card-content>
