fixed bugs with loading characters and refactored code to reduce lines, working on favorites system

--- a/src/pages/my-characters/my-characters.html
+++ b/src/pages/my-characters/my-characters.html
@@ -21,18 +21,6 @@
   
   
   <ion-content padding>
-    <character-card></character-card>
-  <ion-card *ngFor="let favorite of favorites">
-    <img [src]="favorite.imageUrl" height="300"/>
-    <ion-card-content>
-      <ion-card-title text-center>
-        <strong>{{favorite.name}}</strong>
-      </ion-card-title>
-      <div text-justify>
-           {{favorite.description}}
-      </div>
-
-    </ion-card-content>
-    </ion-card>
+    <character-card [userId]="userId" [characters]="favorites" [favorites]="true"></character-card>
     </ion-content>
     
