implement adding favorites, validation for uniqueness still not working, refactor provider methods

--- a/src/pages/my-characters/my-characters.html
+++ b/src/pages/my-characters/my-characters.html
@@ -21,6 +21,6 @@
   
   
   <ion-content padding>
-    <character-card [userId]="userId" [characters]="favorites" [favorites]="true"></character-card>
+    <character-card [userId]="userId" [isFavorite]="true" [characters]="favorites" ></character-card>
     </ion-content>
     
