--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -25,7 +25,7 @@
     </ion-row>
    
     <ion-row>
- <div ion-text text-justify color="light">
+ <div ion-text text-justify color="star-wars">
         {{character.detailedDescription}}
       </div>
     </ion-row>
